--- a/test-harness/pom.xml
+++ b/test-harness/pom.xml
@@ -1,4 +1,7 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.brachu</groupId>
@@ -7,18 +10,19 @@
 
     <properties>
         <!-- Various -->
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <maven.deploy.skip>true</maven.deploy.skip>
         <maven.install.skip>true</maven.install.skip>
+        <maven.main.skip>true</maven.main.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependencies -->
-        <jdt.version>3.27.0</jdt.version>
-        <jdt-apt.version>1.4.0</jdt-apt.version>
+        <jdt.version>3.26.0</jdt.version>
+        <jdt-apt.version>1.3.1300</jdt-apt.version>
         <spock.version>2.0-groovy-3.0</spock.version>
 
         <!-- Maven plugin versions -->
-        <compiler-plugin.version>3.8.1</compiler-plugin.version>
+        <compiler-plugin.version>3.10.1</compiler-plugin.version>
         <build-helper-plugin.version>3.2.0</build-helper-plugin.version>
         <gmavenplus-plugin.version>1.13.0</gmavenplus-plugin.version>
         <surefire-plugin.version>2.22.2</surefire-plugin.version>
@@ -52,15 +56,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.spockframework</groupId>
-            <artifactId>spock-core</artifactId>
+            <groupId>io.brachu</groupId>
+            <artifactId>pig</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>io.brachu</groupId>
-            <artifactId>pig</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -131,4 +135,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
