--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -4,40 +4,17 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.brachu</groupId>
     <artifactId>pig</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
 
-    <name>${project.groupId}:${project.artifactId}</name>
-    <description>Annotation processor that generates package-info.java files for every package</description>
+    <parent>
+        <groupId>io.brachu</groupId>
+        <artifactId>pig-parent</artifactId>
+        <version>${revision}</version>
+    </parent>
+
+    <name>Package Info Generator</name>
+    <description>Annotation processor that generates package-info.java files for every java package</description>
     <url>https://github.com/br4chu/pig</url>
-
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-
-    <organization>
-        <name>Brachu</name>
-        <url>https://github.com/br4chu</url>
-    </organization>
-
-    <developers>
-        <developer>
-            <name>Marcin Jaguś</name>
-            <email>marcin.jagus@protonmail.com</email>
-        </developer>
-    </developers>
-
-    <scm>
-        <url>https://github.com/br4chu/pig</url>
-        <connection>scm:git:git@github.com:br4chu/pig.git</connection>
-        <developerConnection>scm:git:git@github.com:br4chu/pig.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
 
     <distributionManagement>
         <snapshotRepository>
@@ -53,24 +30,23 @@
     <properties>
         <!-- Various -->
         <gpg.keyname>9A481873</gpg.keyname>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.deploy.skip>false</maven.deploy.skip>
+        <maven.install.skip>false</maven.install.skip>
+        <maven.main.skip>false</maven.main.skip>
+        <maven.test.skip>false</maven.test.skip>
 
         <!-- Dependency versions -->
         <auto-service.version>1.0</auto-service.version>
-        <checkstyle.version>9.3</checkstyle.version>
         <jdt-apt.version>1.3.1300</jdt-apt.version>
 
         <!-- Maven plugin versions -->
-        <checkstyle-plugin.version>3.1.2</checkstyle-plugin.version>
-        <compiler-plugin.version>3.10.1</compiler-plugin.version>
         <deploy-plugin.version>2.8.2</deploy-plugin.version>
+        <flatten-plugin.version>1.2.2</flatten-plugin.version>
         <gpg-plugin.version>3.0.1</gpg-plugin.version>
-        <jar-plugin.version>3.2.0</jar-plugin.version>
-        <javadoc-plugin.version>3.3.1</javadoc-plugin.version>
+        <jar-plugin.version>3.2.2</jar-plugin.version>
+        <javadoc-plugin.version>3.4.0</javadoc-plugin.version>
         <release-plugin.version>2.5.3</release-plugin.version>
         <source-plugin.version>3.2.1</source-plugin.version>
-        <spotbugs-plugin.version>4.4.2</spotbugs-plugin.version>
     </properties>
 
     <profiles>
@@ -109,7 +85,7 @@
             <artifactId>tools</artifactId>
             <version>1.8.0</version>
             <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+            <systemPath>/usr/lib/jvm/java-8-openjdk/lib/tools.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -118,16 +94,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${compiler-plugin.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <showWarnings>true</showWarnings>
-                    <compilerArgs>
-                        <arg>-Xlint:all</arg>
-                        <arg>-Xlint:-processing</arg>
-                        <arg>-Werror</arg>
-                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>com.google.auto.service</groupId>
@@ -140,36 +107,28 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${checkstyle-plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.puppycrawl.tools</groupId>
-                        <artifactId>checkstyle</artifactId>
-                        <version>${checkstyle.version}</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>validate</id>
-                        <phase>process-sources</phase>
-                        <configuration>
-                            <configLocation>checkstyle.xml</configLocation>
-                            <violationSeverity>warning</violationSeverity>
-                            <consoleOutput>true</consoleOutput>
-                            <failsOnError>true</failsOnError>
-                        </configuration>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${deploy-plugin.version}</version>
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>${deploy-plugin.version}</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>${flatten-plugin.version}</version>
+                <configuration>
+                    <flattenMode>ossrh</flattenMode>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <flattenedPomFilename>${project.artifactId}-${project.version}.pom</flattenedPomFilename>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -236,26 +195,6 @@
                         <id>attach-sources</id>
                         <goals>
                             <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>${spotbugs-plugin.version}</version>
-                <configuration>
-                    <effort>Max</effort>
-                    <maxRank>20</maxRank>
-                    <threshold>Medium</threshold>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>analyze-compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
