Use revision property instead of project.version

--- a/test-harness-parent/pom.xml
+++ b/test-harness-parent/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>io.brachu</groupId>
             <artifactId>pig</artifactId>
-            <version>${project.version}</version>
+            <version>${revision}</version>
             <scope>test</scope>
         </dependency>
 
