--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>io.brachu</groupId>
         <artifactId>pig-parent</artifactId>
-        <version>${revision}</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <name>Package Info Generator</name>
