--- a/test-harness-parent/test-harness-commons/pom.xml
+++ b/test-harness-parent/test-harness-commons/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>io.brachu</groupId>
         <artifactId>pig-test-harness-parent</artifactId>
-        <version>${revision}</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>io.brachu</groupId>
             <artifactId>pig</artifactId>
-            <version>${revision}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
