--- a/test-harness-parent/test-harness-commons/pom.xml
+++ b/test-harness-parent/test-harness-commons/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>io.brachu</groupId>
         <artifactId>pig-test-harness-parent</artifactId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
 
     <properties>
