--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.brachu</groupId>
     <artifactId>pig-parent</artifactId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Package Info Generator - Parent</name>
@@ -46,22 +46,22 @@
     </scm>
 
     <properties>
-        <!-- Various -->
+        <!-- Configs -->
         <java.version>1.8</java.version>
         <maven.deploy.skip>true</maven.deploy.skip>
         <maven.install.skip>true</maven.install.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependencies -->
-        <checkstyle.version>9.3</checkstyle.version>
+        <checkstyle.version>10.3.3</checkstyle.version>
 
         <!-- Maven plugin versions -->
-        <checkstyle-plugin.version>3.1.2</checkstyle-plugin.version>
-        <compiler-plugin.version>3.10.1</compiler-plugin.version>
-        <javahome-resolver-plugin.version>1.0.2</javahome-resolver-plugin.version>
-        <scm-plugin.version>1.12.2</scm-plugin.version>
-        <spotbugs-plugin.version>4.6.0.0</spotbugs-plugin.version>
-        <toolchains-plugin.version>3.0.0</toolchains-plugin.version>
+        <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+        <maven-scm-plugin.version>1.13.0</maven-scm-plugin.version>
+        <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
+        <spotbugs-maven-plugin.version>4.7.2.0</spotbugs-maven-plugin.version>
     </properties>
 
     <build>
@@ -69,7 +69,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${checkstyle-plugin.version}</version>
+                <version>${maven-checkstyle-plugin.version}</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
@@ -97,14 +97,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${compiler-plugin.version}</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <showWarnings>true</showWarnings>
                     <compilerArgs>
+                        <arg>-XDenableSunApiLintControl</arg>
                         <arg>-Xlint:all</arg>
                         <arg>-Xlint:-processing</arg>
+                        <arg>-Xlint:-sunapi</arg>
                         <arg>-Werror</arg>
                     </compilerArgs>
                 </configuration>
@@ -113,7 +115,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-scm-plugin</artifactId>
-                <version>${scm-plugin.version}</version>
+                <version>${maven-scm-plugin.version}</version>
                 <configuration>
                     <tag>${project.version}</tag>
                 </configuration>
@@ -122,7 +124,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-toolchains-plugin</artifactId>
-                <version>${toolchains-plugin.version}</version>
+                <version>${maven-toolchains-plugin.version}</version>
                 <configuration>
                     <toolchains>
                         <jdk>
@@ -142,7 +144,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>${spotbugs-plugin.version}</version>
+                <version>${spotbugs-maven-plugin.version}</version>
                 <configuration>
                     <effort>Max</effort>
                     <maxRank>20</maxRank>
