--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.brachu</groupId>
     <artifactId>pig-parent</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
     <packaging>pom</packaging>
 
     <name>Package Info Generator - Parent</name>
@@ -42,7 +41,7 @@
         <url>https://github.com/br4chu/pig</url>
         <connection>scm:git:git@github.com:br4chu/pig.git</connection>
         <developerConnection>scm:git:git@github.com:br4chu/pig.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>0.2.0</tag>
     </scm>
 
     <properties>
