--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>io.brachu</groupId>
         <artifactId>pig-parent</artifactId>
-        <version>0.2.0</version>
+        <version>0.2.1-SNAPSHOT</version>
     </parent>
 
     <name>Package Info Generator</name>
