--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,6 +15,13 @@
     <name>Package Info Generator</name>
     <description>Annotation processor that generates package-info.java files for every java package</description>
     <url>https://github.com/br4chu/pig</url>
+
+    <scm>
+        <url>https://github.com/br4chu/pig</url>
+        <connection>scm:git:git@github.com:br4chu/pig.git</connection>
+        <developerConnection>scm:git:git@github.com:br4chu/pig.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
     <distributionManagement>
         <snapshotRepository>
