--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -72,6 +72,7 @@
             <groupId>com.google.auto.service</groupId>
             <artifactId>auto-service-annotations</artifactId>
             <version>${auto-service.version}</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -79,14 +80,6 @@
             <artifactId>org.eclipse.jdt.compiler.apt</artifactId>
             <version>${jdt-apt.version}</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.8.0</version>
-            <scope>system</scope>
-            <systemPath>/usr/lib/jvm/java-8-openjdk/lib/tools.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -118,8 +111,8 @@
                 <version>${flatten-maven-plugin.version}</version>
                 <configuration>
                     <flattenMode>ossrh</flattenMode>
-                    <outputDirectory>${project.build.directory}</outputDirectory>
                     <flattenedPomFilename>${project.artifactId}-${project.version}.pom</flattenedPomFilename>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
