--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>io.brachu</groupId>
         <artifactId>pig-parent</artifactId>
-        <version>0.2.2-SNAPSHOT</version>
+        <version>0.3.0-SNAPSHOT</version>
     </parent>
 
     <name>Package Info Generator</name>
@@ -44,14 +44,15 @@
 
         <!-- Dependency versions -->
         <auto-service.version>1.0.1</auto-service.version>
+        <freemarker.version>2.3.32</freemarker.version>
         <jdt-apt.version>1.3.1300</jdt-apt.version>
 
         <!-- Maven plugin versions -->
-        <flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
-        <maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
+        <flatten-maven-plugin.version>1.4.1</flatten-maven-plugin.version>
+        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
         <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
+        <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
     </properties>
 
@@ -72,6 +73,12 @@
             <artifactId>auto-service-annotations</artifactId>
             <version>${auto-service.version}</version>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
         </dependency>
 
         <dependency>
