--- a/test-harness/pom.xml
+++ b/test-harness/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>io.brachu</groupId>
         <artifactId>pig-parent</artifactId>
-        <version>0.3.0</version>
+        <version>0.3.1-SNAPSHOT</version>
     </parent>
 
     <modules>
