--- a/test-harness/pom.xml
+++ b/test-harness/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,6 +21,8 @@
         <module>test-harness-jdk8</module>
         <module>test-harness-jdk11</module>
         <module>test-harness-jdk17</module>
+        <module>test-harness-jdk21</module>
+        <module>test-harness-jdk25</module>
     </modules>
 
     <properties>
