--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -44,17 +44,17 @@
         <maven.source.skip>true</maven.source.skip>
 
         <!-- Dependency versions -->
-        <auto-service.version>1.0.1</auto-service.version>
-        <freemarker.version>2.3.32</freemarker.version>
-        <jdt-apt.version>1.3.1300</jdt-apt.version>
+        <auto-service.version>1.1.1</auto-service.version>
+        <eclipse-jdt-apt.version>1.3.1300</eclipse-jdt-apt.version>
+        <freemarker.version>2.3.34</freemarker.version>
 
         <!-- Maven plugin versions -->
-        <flatten-maven-plugin.version>1.4.1</flatten-maven-plugin.version>
-        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
-        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
-        <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
-        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <flatten-maven-plugin.version>1.7.2</flatten-maven-plugin.version>
+        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
+        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.11.3</maven-javadoc-plugin.version>
+        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
+        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
     </properties>
 
     <profiles>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.eclipse.jdt</groupId>
             <artifactId>org.eclipse.jdt.compiler.apt</artifactId>
-            <version>${jdt-apt.version}</version>
+            <version>${eclipse-jdt-apt.version}</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
