--- a/test-harness/test-harness-jdk8/pom.xml
+++ b/test-harness/test-harness-jdk8/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,22 +17,22 @@
 
     <properties>
         <!-- Dependencies -->
-        <jdt.version>3.26.0</jdt.version>
-        <jdt-apt.version>1.3.1300</jdt-apt.version>
+        <eclipse-jdt.version>3.26.0</eclipse-jdt.version>
+        <eclipse-jdt-apt.version>1.3.1300</eclipse-jdt-apt.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.eclipse.jdt</groupId>
             <artifactId>org.eclipse.jdt.core</artifactId>
-            <version>${jdt.version}</version>
+            <version>${eclipse-jdt.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.jdt</groupId>
             <artifactId>org.eclipse.jdt.compiler.apt</artifactId>
-            <version>${jdt-apt.version}</version>
+            <version>${eclipse-jdt-apt.version}</version>
             <scope>test</scope>
         </dependency>
 
