--- a/test-harness/test-harness-jdk11/pom.xml
+++ b/test-harness/test-harness-jdk11/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>io.brachu</groupId>
         <artifactId>pig-test-harness-parent</artifactId>
-        <version>0.3.3-SNAPSHOT</version>
+        <version>0.3.3</version>
     </parent>
 
     <properties>
